--- a/themes/icarus/include/style/navbar.styl
+++ b/themes/icarus/include/style/navbar.styl
@@ -7,6 +7,9 @@ $navbar-item-margin-v ?= 0
 $navbar-item-margin-h ?= 0
 
 .navbar-main
+    position: fixed !important
+    width: 100% !important
+    top: 0px
     box-shadow: $shadow
 
     .navbar-container
@@ -22,6 +25,7 @@ $navbar-item-margin-h ?= 0
         flex-grow: 1
         flex-shrink: 0
         overflow-x: auto
+        background-color: transparent
 
     .navbar-start
         justify-content: flex-start
@@ -34,8 +38,8 @@ $navbar-item-margin-h ?= 0
     .navbar-item
         display: flex
         align-items: center
-        padding: $navbar-item-padding-v $navbar-item-padding-h
-        margin: $navbar-item-margin-v $navbar-item-margin-h
+        padding: 8.5px !important
+        margin: 4px !important
 
         &.is-active
             background-color: transparent
@@ -51,6 +55,9 @@ $navbar-item-margin-h ?= 0
         .navbar-end
             margin-left: 0
 
+.section
+    margin-top: 45px
+    
 .navbar-logo
     img
         max-height: $logo-height
