--- a/themes/icarus/include/style/card.styl
+++ b/themes/icarus/include/style/card.styl
@@ -2,6 +2,8 @@
  *              Card
  * --------------------------------- */
 .card
+    z-index: 50
+    top: 30px
     overflow: visible
     border-radius: $card-radius
     &:hover
