--- a/themes/icarus/include/style/navbar.styl
+++ b/themes/icarus/include/style/navbar.styl
@@ -10,6 +10,7 @@ $navbar-item-margin-h ?= 0
     position: fixed !important
     width: 100% !important
     top: 0px
+    z-index: 100
     box-shadow: $shadow
 
     .navbar-container
@@ -56,7 +57,7 @@ $navbar-item-margin-h ?= 0
             margin-left: 0
 
 .section
-    margin-top: 45px
+    margin-top: 60px
     
 .navbar-logo
     img
