motion,blur navbar

--- a/themes/icarus/source/css/night.styl
+++ b/themes/icarus/source/css/night.styl
@@ -7,7 +7,7 @@ dark-font-color = #c0c0c0
 
 #universe
   display: none
-
+    
 .navbar-logo,
 .footer-logo
   .logo-img-dark
@@ -26,6 +26,9 @@ body.night
   #night-nav #night-icon:before
     content: '\f186'
 
+  .navbar
+    background-color: rgba(29,29,31,0.7) !important
+  
   .navbar-menu
     background-color: inherit
   .navbar-main .navbar-menu .navbar-item
@@ -33,7 +36,6 @@ body.night
     &:focus
       color: #ffffff
       background-color: dark-primary-color
-  .navbar,
   .card
     background-color: rgba(40, 44, 52, 0.5)
     backdrop-filter: none
