--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -19,7 +19,7 @@
 
 .card
     transition: background-color .3s,opacity 0.3s ease-out, transform 0.3s ease-out, box-shadow 0.6s !important
-
+    background-color: #FFFFFFCC !important
 .card-link:hover
     color: inherit !important
 
@@ -58,3 +58,12 @@
 @import '../../include/style/donate'
 @import '../../include/style/plugin'
 @import '../../include/style/responsive'
+
+body { 
+    background-image: url(https://img.picui.cn/free/2024/06/02/665c2db6eae66.png);//改成自己的背景地址
+    background-position: center center;//居中显示图片
+    background-repeat: no-repeat;//如果不指定则会重复显示图片直到把页面填满
+    background-attachment: fixed;//固定图片不随页面滚动
+    background-size: cover;//指定图片大小为覆盖整个页面
+    //background-color: #RRGGBBAA;//当然你也可以只指定背景色
+}
