--- a/themes/icarus/source/css/night.styl
+++ b/themes/icarus/source/css/night.styl
@@ -19,7 +19,7 @@ body.night {
     background-repeat: no-repeat;//如果不指定则会重复显示图片直到把页面填满
     background-attachment: fixed;//固定图片不随页面滚动
     background-size: cover;//指定图片大小为覆盖整个页面
-    //background-color: #263238 !important//当然你也可以只指定背景色
+    background-color: #37474F !important//当然你也可以只指定背景色
 }
 
 .night
