--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -65,5 +65,5 @@ body {
     background-repeat: no-repeat;//如果不指定则会重复显示图片直到把页面填满
     background-attachment: fixed;//固定图片不随页面滚动
     background-size: cover;//指定图片大小为覆盖整个页面
-    //background-color: #RRGGBBAA;//当然你也可以只指定背景色
+    background-color: #37474F;//当然你也可以只指定背景色
 }
