remove backgroundImg,remove comment

--- a/themes/icarus/include/style/article.styl
+++ b/themes/icarus/include/style/article.styl
@@ -6,6 +6,9 @@ $article-font-size ?= 1.1rem
 #toc
     max-height: calc(100vh - 22px)
     overflow-y: scroll
+    padding-top: 23px
+.profile
+    position: absolute
 
 article
     &.media
