--- a/themes/icarus/source/css/night.styl
+++ b/themes/icarus/source/css/night.styl
@@ -13,14 +13,8 @@ dark-font-color = #c0c0c0
   .logo-img-dark
     display: none
 
-body.night { 
-    background-image: url(https://img.picui.cn/free/2024/06/02/665c30475514f.png);//改成自己的背景地址
-    background-position: center center;//居中显示图片
-    background-repeat: no-repeat;//如果不指定则会重复显示图片直到把页面填满
-    background-attachment: fixed;//固定图片不随页面滚动
-    background-size: cover;//指定图片大小为覆盖整个页面
-    background-color: #37474F !important//当然你也可以只指定背景色
-}
+body.night
+  background: #0e1225
 
 .night
   // code highlight (https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-dark.min.css)
