--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -60,10 +60,10 @@
 @import '../../include/style/responsive'
 
 body { 
-    background-image: url(https://img.picui.cn/free/2024/06/02/665c2db6eae66.png);//改成自己的背景地址
-    background-position: center center;//居中显示图片
-    background-repeat: no-repeat;//如果不指定则会重复显示图片直到把页面填满
-    background-attachment: fixed;//固定图片不随页面滚动
-    background-size: cover;//指定图片大小为覆盖整个页面
-    background-color: #37474F;//当然你也可以只指定背景色
+    //background-image: url(https://img.picui.cn/free/2024/06/02/665c2db6eae66.png);//改成自己的背景地址
+    //background-position: center center;//居中显示图片
+    //background-repeat: no-repeat;//如果不指定则会重复显示图片直到把页面填满
+    //background-attachment: fixed;//固定图片不随页面滚动
+    //background-size: cover;//指定图片大小为覆盖整个页面
+    background-color: #E0E0E0;//当然你也可以只指定背景色
 }
