--- a/themes/icarus/include/style/base.styl
+++ b/themes/icarus/include/style/base.styl
@@ -36,7 +36,7 @@ $title-weight ?= $weight-normal
 $control-height ?= 2.25em
 $button-padding-vertical ?= calc(0.375em - 1px)
 
-$card-radius ?= 20px
+$card-radius ?= 18px
 $card-media-margin ?= 0.75rem
 $card-shadow ?= $shadow, 0 0 1px rgba(0, 0, 0, 0.1)
 
@@ -87,13 +87,13 @@ body > .section
 
     ::-webkit-scrollbar-track
         border-radius: 3px
-        background: rgba(0,0,0,0.06)
+        background: #0E1225
         box-shadow: inset 0 0 5px rgba(0,0,0,0.1)
 
     ::-webkit-scrollbar-thumb
         border-radius: 3px
-        background: rgba(0,0,0,0.12)
+        background: rgba(225,225,225,1)
         box-shadow: inset 0 0 10px rgba(0,0,0,0.2)
 
     ::-webkit-scrollbar-thumb:hover
-        background: rgba(0,0,0,0.24)
+        background: #BDBDBD
