--- a/themes/icarus/source/css/night.styl
+++ b/themes/icarus/source/css/night.styl
@@ -37,7 +37,7 @@ body.night
       color: #ffffff
       background-color: dark-primary-color
   .card
-    background-color: #262932CC !important
+    background-color: #262932 !important
     backdrop-filter: none
     -webkit-backdrop-filter: none
 
