--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -5,9 +5,9 @@
 
 // Card
 .order-2 .card:hover
-    transform: translateY(-5px)
+    transform: translateY(-10px)
     box-shadow: 1px 10px 30px 0 rgba(0,0,0,.1)
-    -webkit-transform: translateY(-5px)
+    -webkit-transform: translateY(-10px)
     -webkit-box-shadow: 1px 10px 30px 0 rgba(0,0,0,.1)
 
 // Add .controller (article.jsx) to invalidate the motion on the article page
@@ -19,7 +19,7 @@
 
 .card
     transition: background-color .3s,opacity 0.3s ease-out, transform 0.3s ease-out, box-shadow 0.6s !important
-    background-color: #FFFFFFCC !important
+    background-color: #FFFFFF !important
 .card-link:hover
     color: inherit !important
 
