--- a/themes/icarus/include/style/widget.styl
+++ b/themes/icarus/include/style/widget.styl
@@ -43,8 +43,8 @@
         z-index: 100
 
         .card-content
-            padding: 0
-
+            padding: 1.5rem
+        
         .menu
             padding: 1.5rem
             max-height: calc(100vh - 2rem)
