--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -3,6 +3,12 @@
     backdrop-filter: saturate(180%) blur(20px)
     background-color: rgba(255,255,255,0.7) !important
 
+.motto
+    text-align: center
+    cursor: pointer
+    padding: 1rem
+    border: none !important
+
 // Card
 .order-2 .card:hover
     transform: translateY(-10px)
